<resources>
    <string name="app_name">UT3</string>
    <string name="long_app_name">Ultimate Tic Tac Toe</string>
    <string name="action_settings">Settings</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_label">About</string>
    <string name="ok_label">OK</string>
    <string name="about_title">About Ultimate Tic Tac Toe</string> <string name="about_text">\
This game is played just like regular Tic Tac Toe with one difference: to
win a tile you have to win a smaller game of Tic Tac Toe inside that tile.\n\
A tie happens when there are no further moves. In the case of a tie in a small board, that will count as a win for both sides in the larger game.
</string>
    <string name="restart_label">Restart</string>
    <string name="main_menu_label">Home</string>
    <string name="declare_winner">And the winner is.... %1$s!</string>
    <string name="current_turn">It\'s %1$\'s turn!</string>
</resources>